TEST_PROGRAMS/INVALID/frederic_lafrance/5.min
# Assignment is not an expression
while y = 3 do done

